--- a/ormconfig.json
+++ b/ormconfig.json
@@ -7,7 +7,7 @@
   "database": "popmovies",
   "migrations": ["./src/database/migrations/*.ts"],
   "migrationsTableName": "migrations",
-  "entities": ["./src/entities/*.ts"],
+  "entities": ["./src/modules/**/entities/*.ts"],
   "cli": {
     "migrationsDir": "./src/database/migrations"
   }
