--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.16.0",
+    "@typescript-eslint/parser": "^5.16.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.2",
     "express": "^4.17.3",
     "express-async-errors": "^3.1.1",
     "pg": "^8.7.3",
@@ -21,7 +25,13 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.1",
     "@types/uuid": "^8.3.4",
+    "eslint": "^8.11.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-import-resolver-typescript": "^2.7.0",
+    "eslint-plugin-import-helpers": "^1.2.1",
+    "eslint-plugin-prettier": "^4.0.0",
     "jest": "^27.5.1",
+    "prettier": "^2.6.0",
     "ts-jest": "^27.1.3",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.6.2"
